--- a/gb/23/4/26/n13982012.md
+++ b/gb/23/4/26/n13982012.md
@@ -1,69 +1,60 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>李黄香捐赠“身价”最高救护车 守护偏远乡亲</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2023/04/id13982014-611524-600x400.jpg" />
 <h6>李芳香捐赠仪式（苗县府提供）
 </h6>
 <hr>
-<p>【大纪元2023年04月26日讯】（大纪元记者陈文敏台湾苗栗报导）桃园市高龄85岁的李黄香女士，继去年底<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%8D%90%E8%B5%A0.md#1">捐赠</a>南投县消防局<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%95%91%E6%8A%A4%E8%BD%A6.md#1">救护车</a>之后，26日再<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%8D%90%E8%B5%A0.md#1">捐赠</a>1辆价值426万元四轮驱动、配备完善的救护车，拨交苗栗县消防局大湖分队使用，延续先夫李义春生前<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%83%AD%E5%BF%83%E5%85%AC%E7%9B%8A.md#1">热心公益</a>的大爱精神。</p>
-<p>这是目前消防局受赠<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%95%91%E6%8A%A4%E8%BD%A6.md#1">救护车</a>中“身价”最高的1部，县长钟东锦希望它成为“镇队之宝”，备而不用，必要时又能掌握急救黄金时段，及时抢救伤病患的宝贵生命。</p>
-<figure id="13982017" aria-describedby="caption-13982017" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2023/04/id13982017-611527-450x300.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2023/04/id13982017-611527-450x300.jpg" alt="义消捐赠伴手礼" width="500" /></a><figcaption id="caption-13982017" class="wp-caption-text">义消捐赠伴手礼（苗县府提供）</figcaption></figure>
-<figure id="13982016" aria-describedby="caption-13982016" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2023/04/id13982016-611526-450x300.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2023/04/id13982016-611526-450x300.jpg" alt="启动仪式" width="500" /></a><figcaption id="caption-13982016" class="wp-caption-text">启动仪式（苗县府提供）</figcaption></figure>
-<figure id="13982015" aria-describedby="caption-13982015" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2023/04/id13982015-611525-450x300.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2023/04/id13982015-611525-450x300.jpg" alt="县长颁赠感谢状" width="500" /></a><figcaption id="caption-13982015" class="wp-caption-text">县长颁赠感谢状（苗县府提供）</figcaption></figure>
-<figure id="13982013" aria-describedby="caption-13982013" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2023/04/id13982013-611523-450x300.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2023/04/id13982013-611523-450x300.jpg" alt="钟东锦称赞仪器精密 " width="500" /></a><figcaption id="caption-13982013" class="wp-caption-text">钟东锦称赞仪器精密 （苗县府提供）</figcaption></figure>
+<p>【大纪元2023年04月26日讯】（大纪元记者陈文敏台湾苗栗报导）桃园市高龄85岁的李黄香女士，继去年底捐赠南投县消防局救护车之后，26日再捐赠1辆价值426万元四轮驱动、配备完善的救护车，拨交苗栗县消防局大湖分队使用，延续先夫李义春生前热心公益的大爱精神。</p>
+<p>这是目前消防局受赠救护车中“身价”最高的1部，县长钟东锦希望它成为“镇队之宝”，备而不用，必要时又能掌握急救黄金时段，及时抢救伤病患的宝贵生命。</p>
+<figure id="13982017" aria-describedby="caption-13982017" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2023/04/id13982017-611527-450x300.jpg" target="_blank" rel="noreferrer noopener"> <img decoding="async" src="https://i.epochtimes.com/assets/uploads/2023/04/id13982017-611527-450x300.jpg" alt="义消捐赠伴手礼" width="500" /></a><figcaption id="caption-13982017" class="wp-caption-text">义消捐赠伴手礼（苗县府提供）</figcaption></figure>
+<figure id="13982016" aria-describedby="caption-13982016" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2023/04/id13982016-611526-450x300.jpg" target="_blank" rel="noreferrer noopener"> <img decoding="async" src="https://i.epochtimes.com/assets/uploads/2023/04/id13982016-611526-450x300.jpg" alt="启动仪式" width="500" /></a><figcaption id="caption-13982016" class="wp-caption-text">启动仪式（苗县府提供）</figcaption></figure>
+<figure id="13982015" aria-describedby="caption-13982015" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2023/04/id13982015-611525-450x300.jpg" target="_blank" rel="noreferrer noopener"> <img decoding="async" src="https://i.epochtimes.com/assets/uploads/2023/04/id13982015-611525-450x300.jpg" alt="县长颁赠感谢状" width="500" /></a><figcaption id="caption-13982015" class="wp-caption-text">县长颁赠感谢状（苗县府提供）</figcaption></figure>
+<figure id="13982013" aria-describedby="caption-13982013" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2023/04/id13982013-611523-450x300.jpg" target="_blank" rel="noreferrer noopener"> <img decoding="async" src="https://i.epochtimes.com/assets/uploads/2023/04/id13982013-611523-450x300.jpg" alt="钟东锦称赞仪器精密 " width="500" /></a><figcaption id="caption-13982013" class="wp-caption-text">钟东锦称赞仪器精密 （苗县府提供）</figcaption></figure>
 <p>捐赠仪式26日上午在消防局大湖分队举行，捐赠人李黄香女士由弟媳庄月云、义子李允圣及其母亲游茶妹等人陪同出席，县长钟东锦与消防局长匡梦麟代表受赠。钟东锦与李黄香共同主持救护车启动仪式，并与匡梦麟和义消干部分别回赠感谢状、纪念品和伴手礼；另有县议员刘美兰、乡长黄惠琴、主席谢见德及警义消干部多人观礼，见证温馨感人的一刻。</p>
 <p>消防局长匡梦麟指出，择定4月26日举行赠车仪式具有多重意义，县长钟东锦上任至今届满4个月，期间已相继在三湾、西湖、泰安及大湖增添4部设备先进的救护车，加入紧急救护行列；而今天李黄香女士捐赠全县身价最高426万的高阶救护车，数字正好与日期一致，即起投入守护大湖及泰安乡亲的勤务，意义深远。由于苗栗有位有福气的县长，又是有福份的县市，近来有不少消防人员争取返乡服务。</p>
-<p>县长钟东锦表示，古有廿四孝黄香、今有<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%83%AD%E5%BF%83%E5%85%AC%E7%9B%8A.md#1">热心公益</a>的李黄香大姊，善行义举让人感动。钟东锦说，这辆救护车配备四轮驱动，适合地处偏乡且距医院较远的大湖、泰安地区使用，尤其展示出来并实务操作示范的12导程心电图机、自动心肺复苏机及电击器等高阶仪器，对紧急救护助益甚大；他担任义消总队长多年，深知警义消弟兄姊妹都满怀爱心与热忱，会让这份社会爱心发挥最大效益。</p>
+<p>县长钟东锦表示，古有廿四孝黄香、今有热心公益的李黄香大姊，善行义举让人感动。钟东锦说，这辆救护车配备四轮驱动，适合地处偏乡且距医院较远的大湖、泰安地区使用，尤其展示出来并实务操作示范的12导程心电图机、自动心肺复苏机及电击器等高阶仪器，对紧急救护助益甚大；他担任义消总队长多年，深知警义消弟兄姊妹都满怀爱心与热忱，会让这份社会爱心发挥最大效益。</p>
 <p>钟东锦说，从李黄香女士和家人的穿着，不难看出他们辛勤种菜、卖菜，生活勤劳俭朴，却慈眉善目满怀热心社会公益的爱心，所以他是以万分感恩之心受赠救护车。但他希望救护车成为大湖分队的“镇队之宝”，备而不用，一旦必须派上用场，先进的配备定能分秒必争，及时抢救、守护乡亲的宝贵生命。</p>
 <p>消防局指出，李黄香阿嬷早年与丈夫李义春以种菜、卖菜为生，她为实现先夫和已往生儿子李文玄投入社会公益的遗愿，2年前卖掉1笔土地筹措经费，除挹注学校、寺庙经费外，更先后于去年底和今天各捐赠1辆救护车给南投及苗栗县消防局，延续了李家父子大爱精神；而阿嬷的善行义举，有人誉为台东陈树菊的翻版。</p>
 <p>李黄香低调表示，自己虽然已经上了年纪，但只要有助社会公益的事，她还是会继续并尽力去做。她义子李允圣透露，最近还规划再捐赠2部救护车和1部大型巴士给消防单位和公益社团，致力把大爱精神发挥到淋漓尽致。</p>
 <p>责任编辑：玉珍</p>
-
-<hr>
-
-
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/8/15/n13803068.md#1">梁佑南热心公益 与市警局携手宣导反诈骗</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/1/n13940694.md#1">感念器捐者大爱 台大云林分院设立器官捐赠纪念区</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/23/n13956314.md#1">“大公无私齐歌颂 热心公益众赞扬” 至德三德公所春宴贺吴弭市长</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/23/n13956340.md#1">南澳耗资1.2亿救护车服务新总部选址敲定</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13962937.md#1">纽约市救护车费用5月起涨54% 单次1385美元</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/25/n13981279.md#1">听见爱的声音 元健天籁列车捐赠千台助听器</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/25/n13981313.md#1">发扬客家文化 竹县艺文界包机飞日本宫崎交流</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/25/n13981281.md#1">神秘鼻腔透视巡回展 新竹马偕儿童医院登场</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/24/n13980355.md#1">全国中学校际篮球赛 苗栗县长开球展开激战</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/24/n13980352.md#1">部苗射频烧灼术治疗 助肝癌复发病人除患</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/8/15/n13803068.md#1">梁佑南热心公益 与市警局携手宣导反诈骗</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/3/1/n13940694.md#1">感念器捐者大爱 台大云林分院设立器官捐赠纪念区</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/3/23/n13956314.md#1">“大公无私齐歌颂 热心公益众赞扬” 至德三德公所春宴贺吴弭市长</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/3/23/n13956340.md#1">南澳耗资1.2亿救护车服务新总部选址敲定</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/4/1/n13962937.md#1">纽约市救护车费用5月起涨54% 单次1385美元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/4/25/n13981279.md#1">听见爱的声音 元健天籁列车捐赠千台助听器</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309614.md#1">“洛雁美神有机新品”上市 食农市集活动</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309587.md#1">冰箱管理五原则 苗县卫生局关心</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309589.md#1">苗栗客转窦客语家庭培力课程 讲客对屋下讲起势</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/11/n14309002.md#1">2024年台产蜂蜜品质评鉴 职人蜂蜜珍稀</a></li>
 <hr>
-
-
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank">证人描述活摘恐怖</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/25/n10247979.md#1" target="_blank">中共淫乱的前生今世（6）淫乱大看台</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/10/n11248618.md#1" target="_blank">救母何惧强暴 正义存于人心</a></li>
-<hr>
-
+<li><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank">中共迫害良心律师</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/2/8/n11031942.md#1" target="_blank">传奇总统里根（8）：向中国播撒自由精神</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/14/5/28/n4165491.md#1" target="_blank">生命在 信仰在</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/19/n13976615.md#1">【未解之谜】这条河干涸了 末日就会到来？！</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/15/n13973650.md#1">关公托梦的神迹 改写命运的对联</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/13/n13971971.md#1">联耳三兔 跨越时空的传奇图腾</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/10/n13969693.md#1">【古道人生】贞女凭一首诗识破假新郎</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/6/n13966143.md#1">【历史的瞬间】官媒口径中4?25“围攻”中南海的真相</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/24/n13980904.md#1">【秦鹏观察】欧盟将改对华战略 美推90天冲刺</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/22/n13979276.md#1">【时事人物】台湾2024看板：“仁医治国”赖清德</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/24/n13980577.md#1">【远见快评】一言得罪14国 卢沙野泄习秘密？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/23/n13979381.md#1">沈舟：中共海军节糗事 航母启动需48小时</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/23/n13979340.md#1">大陆网络热传第二波染疫潮 张文宏给建议遭质疑</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/23/n13979334.md#1">四川失业女生摆摊 全天只卖5块 崩溃痛哭</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/23/n13979861.md#1">曾拒上亿酬劳担任音乐节目导师？张学友回应</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/23/n13979914.md#1">范冰冰现身香港拍广告 状态获网民夸赞</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/22/n13979124.md#1">《绝地营救》影评：救援行动 让报恩美德大放异彩</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/23/n13979831.md#1">周星驰晒合照 宣布与五月天合组六月天出单曲</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/17/n13974638.md#1">长白发是这些原因造成！6要点1秘诀让白发变黑</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/22/n13979171.md#1">世界各地30名百岁人瑞分享长寿秘诀（上）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/29/n13960579.md#1">名中医的补脑养颜汤 让你的大脑更年轻</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/12/n13970820.md#1">著名音乐人因它病逝 4类人高危 1种维生素可预防</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/24/n13980207.md#1">前所未有 美国房地产6大异象</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306413.md#1">立秋的著名成语  传递什么警讯？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304300.md#1">历史上那些“退”的智慧</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305642.md#1">宋孝宗“竞选”皇位  一猫和十美女如何起作用？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304683.md#1">【未解之谜】灵异阿拉斯加 黑暗金字塔的秘密</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/5/n14304840.md#1">夏海珍——苦海泅渡的修炼故事（3）</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309596.md#1">【马克时空】中国版星链逆袭 星链经验可复制吗</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/2/14/n14180530.md#1">【古韵流芳】和序文双璧同辉的滕王阁诗</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308837.md#1">【探索时分】台湾拟采购鹰眼E2D 能否探测歼20？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308388.md#1">为何外国航空公司纷纷从中国撤出</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308523.md#1">北戴河会议不轻松？中共党媒头版现异常?</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308069.md#1">巴黎奥运世界各国总排名、台湾历届奥运奖牌榜一次看</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308335.md#1">周子瑜谈个子高的坏处 与志效公开真实身高</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14307988.md#1">子瑜感谢志效领导TWICE 难忘成员来家里玩</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308115.md#1">Netflix遭遇最严重的动画泄密盗版事件</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308447.md#1">章子怡带8岁女儿看话剧 母女俩装扮精致</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308804.md#1">“七夕”最惨新片 《多多是条狗》票房仅300元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308042.md#1">什么是“慢购物” 为何它能抢救你的荷包？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/11/n14309023.md#1">研究发现最可能发生车祸时段 开车务必小心</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306576.md#1">蛋壳粉含丰富营养素 强健骨骼牙齿和护肤</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308504.md#1">午睡太久会失智！ 这个时间点小睡片刻最好</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306694.md#1">【人妻日常】突破难熬的磨合期</a></li>
 <hr>
-
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/4/26/n13982012.htm">李黄香捐赠“身价”最高救护车 守护偏远乡亲</a></p><hr>
-
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/23/4/26/n13982012.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/4/26/n13982012.htm">李黄香捐赠“身价”最高救护车 守护偏远乡亲</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/23/4/26/n13982012.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
